# sim-os

./: CMakeLists.txt  event.cpp  event.h  eventtype.h  fcfs.cpp  fcfs.h  historydata.cpp  historydata.h  ioevent.cpp  ioevent.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mutex.cpp  mutex.h  mutexevent.cpp  mutexevent.h  mutexeventtype.h  prio.cpp  prio.h  prioe.cpp  prioe.h  priop.cpp  priop.h  priopa.cpp  priopa.h  readme.md  roundrobin.cpp  roundrobin.h  scheduler.h  simulator.cpp  simulator.h  sjf.cpp  sjf.h  sleepingtask.cpp  sleepingtask.h  srtf.cpp  srtf.h  taskcontrolblock.cpp  taskcontrolblock.h  (+2 more)
